HW#4-Mironov_Danil

--- a/Spacebattle/SpacebattleTests/SpacebattleTests.csproj
+++ b/Spacebattle/SpacebattleTests/SpacebattleTests.csproj
@@ -23,7 +23,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Spacebattle\Spacebattle.csproj" />
+    <ProjectReference Include="..\MainLoader\MainLoader.csproj" />
   </ItemGroup>
 
 </Project>
