--- a/Spacebattle/HW_Prototype.Tests/HW_Prototype.Tests.csproj
+++ b/Spacebattle/HW_Prototype.Tests/HW_Prototype.Tests.csproj
@@ -7,6 +7,7 @@
 
     <IsPackable>false</IsPackable>
     <IsTestProject>true</IsTestProject>
+    <RootNamespace>HW_Prototype.Tests</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
@@ -23,7 +24,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Spacebattle\Spacebattle.csproj" />
+    <ProjectReference Include="..\HW_Prototype\HW_Prototype.csproj" />
   </ItemGroup>
 
 </Project>
