--- a/Spacebattle/HW_Prototype/HW_Prototype.csproj
+++ b/Spacebattle/HW_Prototype/HW_Prototype.csproj
@@ -4,6 +4,7 @@
     <TargetFramework>net7.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    <RootNamespace>HW_Prototype</RootNamespace>
   </PropertyGroup>
 
 </Project>
